# Quantized-Federated-Learning

./: README.md  graphs.py
Phase 1/: Phase1_logs.txt  pyproject.toml
Phase 1/Phase1/: client_app.py  server_app.py  task.py
Phase 2/: Phase2_logs.txt  pyproject.toml
Phase 2/Phase2/: client_app.py  custom_strategy.py  server_app.py  utils.py
Phase 3/: Phase3_logs.txt  pyproject.toml
Phase 3/Phase3/: client_app.py  custom_strategy.py  server_app.py  task.py  utils.py
