[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FL-pytorch-flower"
version = "1.0.1"
description = "Federated Learning with Pytorch and Flower to test various global optimizer strategies with quantized data"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "Phase1.server_app:app"
clientapp = "Phase1.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 15
fraction-evaluate = 0.5
local-epochs = 2
learning-rate = 0.002
batch-size = 64
